# promptwars

./: .gitignore  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  docker-compose.yml  idea.md  run_migrations.py  run_single_migration.py
.github/workflows/: ci.yml  deploy.yml  smoke-tests.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  cloudrun.yaml  conftest.py  game_data.json  game_out.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/core/: config.py  dependencies.py  logging_config.py  security.py
backend/app/data/: piece_templates.py
backend/app/db/: __init__.py  game_store.py  queries.py  supabase_client.py  supabase_store.py
backend/app/middleware/: rate_limiter.py  request_id.py  security_headers.py
backend/app/models/: ai_models.py  chat_models.py  game_models.py
backend/app/routers/: ai.py  auth.py  chat.py  game.py
backend/app/services/: ai_cost_tracker.py  ai_rate_limiter.py  analytics.py  chess_engine.py  gemini_service.py  king_taunts.py  morale_calculator.py  persuasion_engine.py
backend/tests/: conftest.py
backend/tests/fixtures/: __init__.py  data.py  factories.py
backend/tests/unit/: test_ai_rate_limiter.py  test_chess_engine.py  test_king_taunts.py  test_morale_calculator.py  test_persuasion_engine.py
docs/api/: API.md  QUICKSTART.md  README.md  chess-alive-api-postman-collection.json  openapi.json
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  cloudrun.yaml  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
frontend/public/: manifest.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/: ChatInterface.tsx  ChessBoard.tsx  ErrorBoundary.tsx  MoraleTracker.tsx  PersuasionModal.tsx
frontend/src/context/: AuthContext.tsx
prd/: 01-executive-summary.md  02-product-requirements.md  03-system-architecture.md  04-database-design.md  05-api-design.md  06-ai-integration.md  07-ui-ux-design.md  08-testing-strategy.md  09-security.md  10-deployment.md  11-configuration.md  12-development-workflow.md  13-risks-and-mitigation.md  14-references.md  readme.md
scripts/: load_test.py
supabase/migrations/: 001_create_profiles.sql  002_create_games.sql  003_create_game_pieces.sql  004_create_game_moves.sql  005_create_chat_messages.sql  006_create_persuasion_attempts.sql  007_create_morale_events.sql  008_create_indexes.sql  009_create_rls_policies.sql  010_create_functions_triggers.sql  011_alter_black_player_id.sql
(+42 files in other folders)
